<!--
  ~ Copyright (c) 2023.
  ~ Developed by : Bigad Aboubakr
  ~ Developer website : http://bigad.me
  ~ Developer github : https://github.com/Scout4all
  ~ Developer Email : bigad@bigad.me
  -->

<resources>
    <string name="app_name">Shoe Store</string>
    <string name="login_fragment">Login</string>
    <string name="instructions">Instructions</string>
    <string name="shoes_list">Shoes List</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="welcome">Welcome</string>>
    <string name="welcome_message">Welcome to shoes app</string>
    <string name="welcome_body">you have been logged in successfully
        \n It is great to see you again
        \n <font color="green"> %1$s  </font> </string>
    <string name="instructions_messages">
        • Login with your email address and password or create account \n
        • Move To Shoe list screen \n
        • you can see all added shoes from shoe list screen \n
        • you can add new shoe from add shoe button \n
        • Delete shoe from shoe list \n
    </string>
    <string name="email_et_hint">a@b.c</string>
    <string name="password_et_hint">123</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="login">Login</string>
    <string name="new_account">New Account</string>
    <string name="save" translatable="false">Save</string>
    <string name="shoe_name" translatable="false">Shoe Name </string>
    <string name="company" translatable="false">Company</string>
    <string name="shoe_size" translatable="false">Shoe Size</string>
    <string name="shoe_size_hint" translatable="false">00.00</string>
    <string name="description" translatable="false">Description</string>
    <string name="our_shoes_list" translatable="false">our shoes list</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="no_shoes" translatable="false">no shoes to show please add new</string>
    <string name="add_new_shoe" translatable="false">Add new shoe</string>
    <string name="cancel_text" translatable="false">Cancel</string>

</resources>