<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="viewModel"
        type="me.bigad.shoestore.screens.login.LoginViewModel" />
</data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container"
        style="@style/container_style"
        tools:context=".screens.login.LoginFragment">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shoes_icon" />

        <TextView
            android:id="@+id/email_label"
            style="@style/label_style"
            android:text="@string/email_label"
            app:layout_constraintEnd_toStartOf="@+id/email_et"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo" />

        <EditText
            android:id="@+id/email_et"
            style="@style/label_style"
            android:ems="10"
            android:hint="@string/email_et_hint"
            android:inputType="textWebEmailAddress"
            android:drawableStart="@android:drawable/sym_action_email"

            app:layout_constraintBaseline_toBaselineOf="@+id/email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@+id/email_label" />

        <TextView
            android:id="@+id/password_label"
            style="@style/label_style"
            android:text="@string/password_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/password_et"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            app:layout_constraintVertical_bias="0.12" />

        <EditText
            android:id="@+id/password_et"
            style="@style/label_style"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@+id/password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="7"
            android:drawableStart="@android:drawable/ic_lock_lock"

            app:layout_constraintStart_toEndOf="@+id/password_label" />

        <Button
            android:id="@+id/new_account_button"
            style="@style/label_style"
            android:text="@string/new_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_label" />

        <Button
            android:id="@+id/login_button"
            style="@style/label_style"
            android:text="@string/login"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_account_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/new_account_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>