<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023.
  ~ Developed by : Bigad Aboubakr
  ~ Developer website : http://bigad.me
  ~ Developer github : https://github.com/Scout4all
  ~ Developer Email : bigad@bigad.me
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


        <variable
            name="shoeDetailsViewModel"
            type="me.bigad.shoestore.MainActivityViewModel" />

    </data>
    <!--i have used ConstraintLayout to have better ui performance and child views sizing -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoe_details_container"
        style="@style/container_style"
        tools:context=".screens.shoedetails.ShoeDetailsFragment">

        <TextView
            android:id="@+id/shoe_name_label"
            style="@style/label_style"
            android:text="@string/shoe_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_et"
            app:layout_constraintEnd_toStartOf="@+id/shoe_name_et"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_name_et"
            style="@style/label_style"
            android:ems="10"
            android:hint="@string/shoe_name"
            android:inputType="textCapWords"
            android:text="@={shoeDetailsViewModel.mShoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_company_label"
            style="@style/label_style"
            android:text="@string/company"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_company_et"
            app:layout_constraintEnd_toStartOf="@+id/shoe_name_et"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_company_et"
            style="@style/label_style"
            android:ems="10"
            android:hint="@string/company"

            android:inputType="textCapWords"
            android:text="@={shoeDetailsViewModel.mShoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_label"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_et" />

        <TextView
            android:id="@+id/shoe_size_label"
            style="@style/label_style"
            android:text="@string/shoe_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_et"
            app:layout_constraintEnd_toStartOf="@+id/shoe_size_et"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_size_et"
            style="@style/label_style"
            android:ems="10"
            android:hint="@string/shoe_size_hint"
            android:inputType="numberDecimal"
            android:text="@={``+shoeDetailsViewModel.mShoe.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@+id/shoe_size_label"
            app:layout_constraintTop_toBottomOf="@id/shoe_company_et" />

        <TextView
            android:id="@+id/shoe_description_label"
            style="@style/label_style"
            android:text="@string/description"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_description_et"
            app:layout_constraintEnd_toStartOf="@+id/shoe_description_et"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_description_et"
            style="@style/label_style"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:text="@={shoeDetailsViewModel.mShoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_label"
            app:layout_constraintTop_toBottomOf="@id/shoe_size_et" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/button_style"
            android:backgroundTint="@android:color/holo_red_dark"
            android:onClick="@{() -> shoeDetailsViewModel.onBack()}"
            android:text="@string/cancel_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_et"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/save_button"
            style="@style/button_style"
            android:onClick="@{()->shoeDetailsViewModel.onSaveShoe()}"
            android:text="@string/save"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@id/shoe_description_et"
            app:layout_constraintVertical_bias="1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>