<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023.
  ~ Developed by : Bigad Aboubakr
  ~ Developer website : http://bigad.me
  ~ Developer github : https://github.com/Scout4all
  ~ Developer Email : bigad@bigad.me
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.bigad.shoestore.screens.instructions.InstructionsViewModel" />
    </data>

    <!--I have used ConstraintLayout to have better ui performance and child views sizing -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instructions_container"
        style="@style/container_style"

        tools:context=".screens.instructions.InstructionsFragment">

        <TextView
            android:id="@+id/instructions_title_text"
            style="@style/body_text_style"
            android:text="@string/instructions"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_list_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ScrollView
            android:id="@+id/instructions_message_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@id/shoe_list_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_title_text">


            <TextView
                android:id="@+id/instructions_message"
                style="@style/body_text_style"
                android:text="@string/instructions_messages"

                app:layout_constraintEnd_toEndOf="parent" />
        </ScrollView>

        <Button
            android:id="@+id/shoe_list_button"
            style="@style/button_style"
            android:text="@string/shoes_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_message_container"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>